@@ -5,7 +5,6 @@ Makefile.in
 *.patch
 *.log
 *.xac.*.xac
-gnc-dir.h
 gnucash
 .deps
 .libs
